# zsystem

./: CMakeLists.txt  tbuild.cfg  zsystemConfig.cmake
data/: lorem_ipsum.txt
src/main/: CMakeLists.txt  main.cpp
src/main/zsystem/: Backtrace.cpp  Backtrace.h  Logger.h  Process.cpp  Process.h  SharedMemory.cpp  SharedMemory.h  Signal.cpp  Signal.h  SignalHandler.cpp  SignalHandler.h
src/main/zsystem/process/: Arguments.cpp  Arguments.h  Consumer.h  ConsumerFile.cpp  ConsumerFile.h  Environment.cpp  Environment.h  Feature.h  FeatureProcess.cpp  FeatureProcess.h  FeatureTime.cpp  FeatureTime.h  FileDescriptor.cpp  FileDescriptor.h  Producer.h  ProducerDynamic.cpp  ProducerDynamic.h  ProducerFile.cpp  ProducerFile.h  ProducerStatic.cpp  ProducerStatic.h
src/test/: CMakeLists.txt  main.cpp
